Добавлена главная страница

--- a/app/static/app/css/bootstrap.css
+++ b/app/static/app/css/bootstrap.css
@@ -8224,6 +8224,11 @@ textarea.form-control-lg {
   background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity)) !important;
 }
 
+.bg-gold {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-warning), var(--bs-bg-opacity)) !important;
+}
+
 .bg-body {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-body-bg-rgb), var(--bs-bg-opacity)) !important;
