Изменена главная страница

--- a/app/templates/app/main.html
+++ b/app/templates/app/main.html
@@ -66,42 +66,68 @@
   <div class="container marketing">
 
     <!-- Three columns of text below the carousel -->
-    <div class="row">
-        <h2 class="text-center mb-5">Тарифные планы</h2>
-          <div class="col-lg-3 bg-dark text-center p-5">
+    <div class="row gy-5 gx-3">
+        <h2 class="text-center mb-2">Тарифные планы</h2>
+          <div class="col-lg-3 col-sm-6 bg-dark text-center text-white p-5">
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
             <h2 class="fw-normal">Тестер</h2>
-            <p>Для вас и вашего воображаемого друга.</p>
-            <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+            <p>Для вас и ваших безумных экспериментов.</p>
+            <p class="text-start">
+                <ul class="list-unstyled">
+                    <li class="list-group-item">1</li>
+                    <li class="list-group-item">2</li>
+                    <li class="list-group-item">3</li>
+                </ul>
+            </p>
+            <p class="blockquote h1">Бесплатно</p>
+            <p><a class="btn btn-secondary" href="#">Подробнее &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
 
-          <div class="col-lg-3 bg-info text-center">
+          <div class="col-lg-3 col-sm-6 bg-danger text-center text-white p-5">
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
             <h2 class="fw-normal">Ламповый</h2>
             <p>Для вас и вашего воображаемого друга.</p>
+            <p class="text-start">
+                <ul class="list-unstyled">
+                    <li class="list-group-item">1</li>
+                    <li class="list-group-item">2</li>
+                    <li class="list-group-item">3</li>
+                </ul>
+            </p>
+            <p class="blockquote h1">90 руб</p>
             <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
 
-          <div class="col-lg-3 bg-danger text-center">
+          <div class="col-lg-3 col-sm-6 bg-purple text-center text-white p-5">
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
             <h2 class="fw-normal">Вечеринка</h2>
             <p>Для вас и вашего сообщества.</p>
             <p class="text-start">
-            <ul class="list-group">
-                <li class="list-group-item list-group-item-dark">1</li>
-                <li>2</li>
-            </ul>
+                <ul class="list-unstyled">
+                    <li class="list-group-item">1</li>
+                    <li class="list-group-item">2</li>
+                    <li class="list-group-item">3</li>
+                </ul>
             </p>
+            <p class="blockquote h1">90 руб</p>
             <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
-          <div class="col-lg-3 bg-gold text-center">
+          <div class="col-lg-3 col-sm-6 bg-warning text-center text-white p-5">
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
             <h2 class="fw-normal">Королевский</h2>
             <p>Для вас и вашего бизнеса.</p>
+            <p class="text-start">
+                <ul class="list-unstyled">
+                    <li class="list-group-item">1</li>
+                    <li class="list-group-item">2</li>
+                    <li class="list-group-item">3</li>
+                </ul>
+            </p>
+            <p class="blockquote h1">90 руб</p>
             <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
