--- a/app/templates/app/dashboard.html
+++ b/app/templates/app/dashboard.html
@@ -6,7 +6,7 @@
             <link rel="stylesheet" href="{% static 'app/css/offcanvas.css' %}">
             <nav class="nav" aria-label="Secondary navigation">
                 <a class="nav-link active" aria-current="page" href="#">Приложения</a>
-                <a class="nav-link" href="#">Статистика</a>
+                <a class="nav-link disabled" href="#">Статистика</a>
             </nav>
         </div>
 {% endblock %}
