--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="{% static 'app/css/offcanvas.css' %}">
         <link rel="stylesheet" href="{% static 'app/icons/bootstrap-icons.css' %}">
 
+
     </head>
     <body class="bg-light">
 
@@ -33,19 +34,19 @@
                         </li>
                     {% endif %}
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Документация</a>
+                      <a class="nav-link disabled" href="#">Документация</a>
                     </li>
                     </ul>
                     {% if request.user.is_authenticated %}
                         <button class="btn btn-close-white nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">{{ request.user }}</a>
                             <ul class="dropdown-menu ">
-                                <li><a class="dropdown-item" href="#"><i class="bi bi-person"></i> Профиль</a></li>
+                                <li><a class="dropdown-item disabled" href="#"><i class="bi bi-person"></i> Профиль</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#"><i class="bi bi-bell"></i> Уведомления <span class="badge bg-primary rounded-pill align-text-bottom">27</span></a></li>
-                                <li><a class="dropdown-item" href="#"><i class="bi bi-wallet2"></i> Кошелёк <span class="badge bg-primary rounded-pill align-text-bottom">{{ request.user.wallet }} ₽</span></a></li>
+                                <li><a class="dropdown-item disabled" href="#"><i class="bi bi-bell"></i> Уведомления <span class="badge bg-primary rounded-pill align-text-bottom">27</span></a></li>
+                                <li><a class="dropdown-item disabled" href="#"><i class="bi bi-wallet2"></i> Кошелёк <span class="badge bg-primary rounded-pill align-text-bottom">{{ request.user.wallet }} ₽</span></a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#"><i class="bi bi-nut"></i> Настройки</a></li>
+                                <li><a class="dropdown-item disabled" href="#"><i class="bi bi-nut"></i> Настройки</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="bi bi-box-arrow-right"></i> Выход</a></li>
                             </ul>
