--- a/app/templates/app/main.html
+++ b/app/templates/app/main.html
@@ -97,7 +97,7 @@
                 </ul>
             </p>
             <p class="blockquote h1">90 руб</p>
-            <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="#">Подробнее &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
 
           <div class="col-lg-3 col-sm-6 bg-purple text-center text-white p-5">
@@ -113,7 +113,7 @@
                 </ul>
             </p>
             <p class="blockquote h1">90 руб</p>
-            <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="#">Подробнее &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-3 col-sm-6 bg-warning text-center text-white p-5">
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
@@ -128,7 +128,7 @@
                 </ul>
             </p>
             <p class="blockquote h1">90 руб</p>
-            <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="#">Подробнее &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
