1). Устранены дыры в безопасности 2). Начата подготовка к выгрузке приложения на сервер 3). Мелкие исправления в системе. 4). Добавлено отслеживание статуса контейнера на бекенде

--- a/app/templates/app/apps.html
+++ b/app/templates/app/apps.html
@@ -26,7 +26,7 @@
 
       <div class="container">
         <p class="pb-3 mb-5 small lh-sm border-bottom">
-          <strong class="d-block text-gray-dark"><a href="#mod" data-bs-toggle="modal" onclick="getData({{ app.pk }})">{{ app.title }}</a></strong>
+          <strong class="d-block text-gray-dark"><a href="../app/{{ app.pk }}" data-bs-toggle="modal">{{ app.title }}</a></strong>
           {{ app.description }}
         </p>
       </div>
