--- a/app/templates/app/add_app.html
+++ b/app/templates/app/add_app.html
@@ -2,11 +2,10 @@
 {% load static %}
 
 {% block content %}
-    <div class="nav-scroller bg-body shadow-sm m-5"></div>
 
     <main class="form-signin w-100 m-auto ">
         <div class="container">
-            <form method="post" enctype="multipart/form-data" class="col-6 text-center">
+            <form method="post" enctype="multipart/form-data" class="col-sm-12 col-md-6 text-center mb-3 mt-4">
                 <img class="mb-4" src="{% static 'app/images/logo.png' %}" alt="" width="72">
                 <h1 class="h3 mb-3 fw-normal">Создание приложения</h1>
                 <div class="text-start">
