--- a/app/templates/app/edit_app.html
+++ b/app/templates/app/edit_app.html
@@ -6,7 +6,7 @@
 
     <main class="form-signin w-100 m-auto ">
         <div class="container">
-            <form method="post" enctype="multipart/form-data" class="col-6 text-center">
+            <form method="post" enctype="multipart/form-data" class="col-sm-12 col-md-6 text-center">
                 <img class="mb-4" src="{% static 'app/images/logo.png' %}" alt="" width="72">
                 <h1 class="h3 mb-3 fw-normal">Изменение приложения</h1>
                 <div class="text-start">
