--- a/accounts/templates/account/email_confirm.html
+++ b/accounts/templates/account/email_confirm.html
@@ -1,31 +1,40 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% load account %}
+{% load account static %}
 
 {% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
 
 
 {% block content %}
-<h1>{% trans "Confirm E-mail Address" %}</h1>
+        <link rel="stylesheet" href="{% static 'app/css/signin.css' %}">
 
-{% if confirmation %}
+    <div class="container col-lg-6 pt-5 text-center">
+        <img src="{% static 'app/images/logo.svg' %}" alt="" width="80">
+        <h1>{% trans "Confirm E-mail Address" %}</h1>
 
-{% user_display confirmation.email_address.user as user_display %}
+        {% if confirmation %}
+            {% user_display confirmation.email_address.user as user_display %}
 
-<p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
+            <p>{% blocktrans with confirmation.email_address.email as email %}Пожалуйста, подтвердите, что
+                <a class="link-info" href="mailto:{{ email }}">{{ email }}</a> — это адрес электронной почты
+                пользователя {{ user_display }}.
+            {% endblocktrans %}</p>
 
-<form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-{% csrf_token %}
-    <button type="submit">{% trans 'Confirm' %}</button>
-</form>
+            <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+                {% csrf_token %}
+                <button class="btn btn-primary" type="submit">{% trans 'Confirm' %}</button>
+            </form>
 
-{% else %}
+        {% else %}
 
-{% url 'account_email' as email_url %}
+            {% url 'account_email' as email_url %}
 
-<p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
+            <p>{% blocktrans %}Срок действия этой ссылки для подтверждения по электронной почте истек или она
+                недействительна. Пожалуйста,
+                <a class="link-primary" href="{{ email_url }}">отправьте новый запрос на подтверждение по электронной
+                    почте</a>.{% endblocktrans %}</p>
 
-{% endif %}
-
+        {% endif %}
+    </div>
 {% endblock %}
