--- a/accounts/templates/account/logout.html
+++ b/accounts/templates/account/logout.html
@@ -1,22 +1,23 @@
 {% extends "account/base.html" %}
 
-{% load i18n %}
+{% load i18n static %}
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="container text-center my-5">
-<h1 class="fw-normal">{% trans "Sign Out" %}</h1>
+    <link rel="stylesheet" href="{% static 'app/css/signin.css' %}">
+    <div class="container text-center my-5">
+        <h1 class="fw-normal">{% trans "Sign Out" %}</h1>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
+        <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button class="btn btn-lg btn-primary" type="submit">{% trans 'Sign Out' %}</button>
-</form>
-</div>
+        <form method="post" action="{% url 'account_logout' %}">
+            {% csrf_token %}
+            {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+            {% endif %}
+            <button class="btn btn-lg btn-primary" type="submit">{% trans 'Sign Out' %}</button>
+        </form>
+    </div>
 
 {% endblock %}
