--- a/accounts/templates/account/password_reset.html
+++ b/accounts/templates/account/password_reset.html
@@ -1,24 +1,34 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% load account %}
+{% load static account %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
+    <link rel="stylesheet" href="{% static 'app/css/signin.css' %}">
 
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
+    <div class="container col-lg-6 col-sm-12 text-center">
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+        <img src="{% static 'app/images/logo.svg' %}" alt="" width="80">
+        <h1>{% trans "Password Reset" %}</h1>
+        {% if user.is_authenticated %}
+            {% include "account/snippets/already_logged_in.html" %}
+        {% endif %}
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
+        <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+        <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+            {% csrf_token %}
+            {% for field in form %}
+                <div class="form-floating w-75 m-auto">
+                    {{ field }}
+                    <label for="floatingInput">{{ field.label }}</label>
+                </div>
+            {% endfor %}
+            <input class="btn btn-primary my-2" type="submit" value="{% trans 'Сбросить пароль' %}"/>
+        </form>
+
+        <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    </div>
 {% endblock %}
