--- a/accounts/templates/account/password_reset_done.html
+++ b/accounts/templates/account/password_reset_done.html
@@ -1,16 +1,26 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% load account %}
+{% load account static %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Password Reset" %}</h1>
-    
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    
-    <p>{% blocktrans %}We have sent you an e-mail. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.{% endblocktrans %}</p>
+
+    <link rel="stylesheet" href="{% static 'app/css/signin.css' %}">
+
+    <div class="container col-lg-6 text-center pt-5">
+
+        <img src="{% static 'app/images/logo.svg' %}" alt="" width="80">
+        <h1>{% trans "Password Reset" %}</h1>
+
+        {% if user.is_authenticated %}
+            {% include "account/snippets/already_logged_in.html" %}
+        {% endif %}
+
+        <p>{% blocktrans %}Мы отправили Вам электронное письмо для проверки. Перейдите по ссылке ниже, чтобы завершить
+            процесс регистрации. Если Вы не видите письмо с подтверждением в своем почтовом ящике, проверьте папку со
+            спамом. Пожалуйста, свяжитесь с нами, если Вы не получили электронное письмо с подтверждением в течение
+            нескольких минут.{% endblocktrans %}</p>
+    </div>
 {% endblock %}
