--- a/accounts/templates/account/password_reset_from_key.html
+++ b/accounts/templates/account/password_reset_from_key.html
@@ -1,19 +1,29 @@
 {% extends "account/base.html" %}
 
-{% load i18n %}
+{% load i18n static %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+    <link rel="stylesheet" href="{% static 'app/css/signin.css' %}">
 
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        <form method="POST" action="{{ action_url }}">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" name="action" value="{% trans 'change password' %}"/>
-        </form>
-    {% endif %}
+    <div class="container col-lg-4 col-sm-12 text-center pt-5">
+        <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+
+        {% if token_fail %}
+            {% url 'account_reset_password' as passwd_reset_url %}
+            <p>{% blocktrans %}Ссылка для сброса пароля недействительна, возможно, потому, что она уже использовалась.
+                Пожалуйста, запросите <a href="{{ passwd_reset_url }}">сброс нового пароля</a>.{% endblocktrans %}</p>
+        {% else %}
+            <form method="POST" action="{{ action_url }}">
+                {% csrf_token %}
+                {% for field in form %}
+                    <div class="form-floating w-75 m-auto mt-2">
+                        {{ field }}
+                        <label for="floatingInput">{{ field.label }}</label>
+                    </div>
+            {% endfor %}
+                <input class="btn btn-primary my-2" type="submit" name="action" value="{% trans 'Change password' %}"/>
+            </form>
+        {% endif %}
+    </div>
 {% endblock %}
