--- a/accounts/templates/account/password_reset_from_key_done.html
+++ b/accounts/templates/account/password_reset_from_key_done.html
@@ -1,9 +1,12 @@
 {% extends "account/base.html" %}
 
-{% load i18n %}
+{% load static i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+    <link rel="stylesheet" href="{% static 'app/css/signin.css' %}">
+    <div class="container text-center pt-5">
+        <h1>{% trans "Смена пароля" %}</h1>
+        <p>{% trans 'Your password is now changed.' %}</p>
+    </div>
 {% endblock %}
