--- a/app/templates/app/main.html
+++ b/app/templates/app/main.html
@@ -73,11 +73,11 @@
         ================================================== -->
         <!-- Wrap the rest of the page in another container to center all the content. -->
 
-        <h2 class="text-center mb-2">Тарифные планы</h2>
+        <h2 class="text-center mb-4">Тарифные планы</h2>
 
         <div class="container">
             <div class="card-deck d-flex flex-column flex-md-row justify-content-center text-center">
-                <div class="card col-3 me-4 mb-2 shadow-sm bg-dark text-center text-white">
+                <div class="card col-sm-12 col-md-3 pt-2 mx-4 mb-2 shadow-sm bg-dark text-center text-white">
                     <div class="container">
                         <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
                              xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
@@ -95,16 +95,18 @@
                         <li class="list-group-item">3</li>
                     </ul>
                     </p>
-                    <p class="blockquote h1">Бесплатно</p>
+                    <p class="blockquote h1">150 руб</p>
                     <p><a class="btn btn-secondary" href="#">Подробнее &raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
-                <div class="card col-3 mx-4 mb-2 shadow-sm bg-danger text-center text-white ">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                         xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                         preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#777"/>
-                        <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-                    </svg>
+                <div class="card col-sm-12 col-md-3 pt-2 mx-4 mb-2 shadow-sm bg-danger text-center text-white ">
+                    <div class="container">
+                        <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
+                             preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#777"/>
+                            <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
+                        </svg>
+                    </div>
 
                     <h2 class="fw-normal">Ламповый</h2>
                     <p>Для вас и<br>вашего воображаемого друга.</p>
@@ -115,16 +117,18 @@
                         <li class="list-group-item">3</li>
                     </ul>
                     </p>
-                    <p class="blockquote h1">90 руб</p>
+                    <p class="blockquote h1">270 руб</p>
                     <p><a class="btn btn-secondary" href="#">Подробнее &raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
-                <div class="card col-3 mx-4 mb-2 shadow-sm bg-purple text-center text-white ">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                         xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                         preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#777"/>
-                        <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-                    </svg>
+                <div class="card col-sm-12 col-md-3 pt-2 mx-4 mb-2 shadow-sm bg-purple text-center text-white ">
+                    <div class="container">
+                        <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
+                             preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#777"/>
+                            <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
+                        </svg>
+                    </div>
 
                     <h2 class="fw-normal">Вечеринка</h2>
                     <p>Для вас и<br>вашего сообщества.</p>
@@ -135,16 +139,18 @@
                         <li class="list-group-item">3</li>
                     </ul>
                     </p>
-                    <p class="blockquote h1">90 руб</p>
+                    <p class="blockquote h1">400 руб руб</p>
                     <p><a class="btn btn-secondary" href="#">Подробнее &raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
-                <div class="card col-3 ms-4 mb-2 shadow-sm bg-warning text-center text-white ">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                         xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                         preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#777"/>
-                        <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-                    </svg>
+                <div class="card col-sm-12 col-md-3 pt-2 mx-4 mb-2 shadow-sm bg-warning text-center text-white ">
+                    <div class="container">
+                        <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
+                             preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+                            <rect width="100%" height="100%" fill="#777"/>
+                            <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
+                        </svg>
+                    </div>
 
                     <h2 class="fw-normal">Королевский</h2>
                     <p>Для вас и<br> вашего бизнеса.</p>
@@ -155,7 +161,7 @@
                         <li class="list-group-item">3</li>
                     </ul>
                     </p>
-                    <p class="blockquote h1">90 руб</p>
+                    <p class="blockquote h1">740 руб руб</p>
                     <p><a class="btn btn-secondary" href="#">Подробнее &raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
             </div>
