--- a/accounts/templates/socialaccount/signup.html
+++ b/accounts/templates/socialaccount/signup.html
@@ -1,22 +1,31 @@
 {% extends "socialaccount/base.html" %}
 
-{% load i18n %}
+{% load i18n static %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
+    <link rel="stylesheet" href="{% static 'app/css/signin.css' %}">
+
+
     <h1>{% trans "Sign Up" %}</h1>
+    <div class="container col-lg-6 text-center">
 
-<p>{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}You are about to use your {{provider_name}} account to login to
-{{site_name}}. As a final step, please complete the following form:{% endblocktrans %}</p>
+        <img src="{% static 'app/images/logo.svg' %}" alt="" width="80">
+        <p>{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}Вы используете
+            {{ provider_name }} для авторизации на
+            {{ site_name }}. Чтобы завершить, заполните следующую форму:{% endblocktrans %}</p>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'socialaccount_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
-
+        <form class="signup" id="signup_form" method="post" action="{% url 'socialaccount_signup' %}">
+            {% csrf_token %}
+            {% for field in form %}
+                <div class="form-floating">
+                    {{ field }}
+                    <label for="floatingInput">{{ field.label }}</label>
+                </div>
+            {% endfor %}
+            {{ form.as_p }}
+            <button class="btn btn-primary" type="submit">{% trans "Sign Up" %} &raquo;</button>
+        </form>
+    </div>
 {% endblock %}
