Поправлены шаблоны на проде

--- a/accounts/templates/account/logout.html
+++ b/accounts/templates/account/logout.html
@@ -7,6 +7,8 @@
 {% block content %}
     <link rel="stylesheet" href="{% static 'app/css/signin.css' %}">
     <div class="container text-center my-5">
+
+        <img src="{% static 'app/images/logo.svg' %}" alt="" width="75">
         <h1 class="fw-normal">{% trans "Sign Out" %}</h1>
 
         <p>{% trans 'Are you sure you want to sign out?' %}</p>
