--- a/app/templates/app/apps.html
+++ b/app/templates/app/apps.html
@@ -1,6 +1,8 @@
 {% extends 'app/dashboard.html' %}
 {% load static %}
 
+{% block head_title %}Приложения{% endblock %}
+
 {% block content %}
 <main class="container">
   <div class="d-flex align-items-center p-3 my-3 text-white bg-dark rounded shadow-sm">
