--- a/app/templates/app/main.html
+++ b/app/templates/app/main.html
@@ -1,6 +1,6 @@
 {% extends 'app/base.html' %}
 {% load static %}
-
+{% block head_title %}Главная{% endblock %}
 {% block content %}
 
     <link href="{% static 'app/css/carousel.css' %}" rel="stylesheet">
