--- a/accounts/templates/socialaccount/login.html
+++ b/accounts/templates/socialaccount/login.html
@@ -17,7 +17,7 @@
         {% else %}
             <h1>{% blocktrans with provider.name as provider %}Sign In Via {{ provider }}{% endblocktrans %}</h1>
 
-            <p>{% blocktrans with provider.name as provider %}You are about to sign in using a third party account from
+            <p>{% blocktrans with provider.name as provider %}Вы собираетесь войти, используя учетную запись от
                 {{ provider }}.{% endblocktrans %}</p>
         {% endif %}
 
