--- a/app/templates/app/edit_app.html
+++ b/app/templates/app/edit_app.html
@@ -1,6 +1,8 @@
 {% extends 'app/base.html' %}
 {% load static %}
 
+{% block head_title %}Изменение приложения{% endblock %}
+
 {% block content %}
     <div class="nav-scroller bg-body shadow-sm m-5"></div>
 
