--- a/support/templates/support/bug_report.html
+++ b/support/templates/support/bug_report.html
@@ -1,12 +1,14 @@
 {% extends 'app/base.html' %}
 {% load static %}
 
+{% block head_title %}Поддержка{% endblock %}
+
 {% block content %}
     <div class="nav-scroller bg-body shadow-sm m-5"></div>
 
     <main class="form-signin w-100 m-auto ">
         <div class="container">
-            <form method="post" enctype="multipart/form-data" class="col-sm-12 col-md-6 text-center">
+            <form method="post" enctype="multipart/form-data" class="col-sm-12 col-md-6 pb-4 text-center">
                 <img class="mb-4" src="{% static 'app/images/logo.png' %}" alt="" width="72">
                 <h1 class="h3 mb-3 fw-normal">Создание отчета о баге или пожелании</h1>
                 <div class="text-start">
